--- a/index.css
+++ b/index.css
@@ -1,3 +1,20 @@
 main {
   text-align: center;
 }
+
+.stopWatch {
+  background-color: #263f45;
+  height: 250px;
+  width: 250px;
+  border-radius: 120px;
+  border: 2px solid #000;
+  margin: 0 auto;
+}
+
+.display {
+  background-color: #fff;
+  height: 50px;
+  width: 150px;
+  margin: 0 auto;
+  margin-top: 100px
+}
